Fixed navbar z-index and schedule display

--- a/static/css/app/main.css
+++ b/static/css/app/main.css
@@ -9,7 +9,7 @@ html {
 .navbar {
   border-radius: 0px;
   box-shadow: 0px 1px 2px rgba(0,0,0,.25);
-  z-index: 1;
+  z-index: 100;
   position: relative;
 }
 
