--- a/static/css/app/profile.css
+++ b/static/css/app/profile.css
@@ -8,7 +8,7 @@
     left: 0px;
     width: 100%;
     height: 100%;
-    z-index: 9999;
+    z-index: 10;
     background: rgba(255,255,255,.75);
     display: flex;
     align-items: center;
